[package]
name = "darkdown"
version = "0.1.5"
edition = "2021"
description = "A darkdown(our own markup language) parser written in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
